<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorBackground">
    <LinearLayout android:gravity="center" android:orientation="vertical"
                  android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/endimage"
                   android:contentDescription="@string/imagealt_endimage" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/colorTextLight"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginBottom="15.0sp"
              android:text="@string/textview_winmsg1" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button android:textColor="@color/colorTextLight" android:gravity="center"
                android:id="@id/back" android:background="@color/colorPrimary"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/button_back" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>