<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorBackground">
    <LinearLayout android:gravity="center" android:orientation="vertical"
                  android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/image" android:layout_width="200.0sp"
                   android:layout_height="200.0sp"
                   android:contentDescription="@string/imagealt_endimage" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/colorTextLight"
              android:gravity="center" android:id="@id/text"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_marginBottom="25.0sp" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/button_back" android:textColor="@color/colorTextLight"
            android:gravity="center" android:layout_weight="1.0"
            android:background="@color/colorPrimary" android:id="@id/back"
            android:layout_marginRight="2dp" />
        <Button
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/button_next" android:textColor="@color/colorTextLight"
            android:gravity="center" android:layout_weight="1.0"
            android:background="@color/colorPrimary" android:id="@id/next"
            android:layout_marginLeft="2dp" />
    </LinearLayout>
</LinearLayout>